--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="userName">Vishwaraj Shabadi</div>
 
     <div class="links">
-      <a class="link" href="https://twitter.com/VShabadi" target="_blank">
+      <a class="link" href="https://twitter.com/VShabadi" target="_blank"> <!-- Add or  remove as many links as you want -->
         <i class="fab fa-twitter">&nbsp;</i>Twitter
       </a>
       <a class="link" href="https://instagram.com/vshabadi" target="_blank">
