--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <a class="link" href="mailto:vshabadi@protonmail.com" target="_blank">
         <i class="fa fa-envelope">&nbsp;</i>Email
       </a>
-      <a class="link" href="https://instagram.com/vshabadi" target="_blank">
+      <a class="link" href="https://fervium.github.io/" target="_blank">
         <i class="fa fa-money-bill-alt">&nbsp;</i>Fervium
       </a>
     </div>
