--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,12 @@
     </div>
 
     <div class="source">
-      Made by Vishwaraj Shabadi. If you want your own bio-link-tool, here is a
+      Made by <a
+        href="https://vshabadi.github.io/bio-link-tool/"
+        target="_blank"
+        rel="noopener noreferrer"
+        >Vishwaraj Shabadi</a
+      >. If you want your own bio-link-tool, here is a
       <a
         href="https://github.com/VShabadi/bio-link-tool/blob/main/README.md"
         target="_blank"
