--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <div class="source">
       Made by Vishwaraj Shabadi. If you want your own bio-link-tool, here is a
       <a
-        href="https://github.com/VShabadi/bio-link-tool/blob/main/README.md"
+        href="https://vshabadi.github.io/bio-link-tool/"
         target="_blank"
         rel="noopener noreferrer"
         >guide</a
