--- a/index.html
+++ b/index.html
@@ -17,21 +17,15 @@
       type="image/x-icon"
     />
 
-    <!-- Global site tag (gtag.js) - Google Analytics; REPLACE WITH YOUR OWN -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=G-SHZ4H4JD2B"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-SDG0CVEFJG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-      gtag("config", "G-SHZ4H4JD2B");
-    </script>
-  </head>
+  gtag('config', 'G-SDG0CVEFJG');
+</script>
 
   <body>
     <a class="profilePicture">
