--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
     </a>
 
     <div class="userName">Vishwaraj Shabadi</div>
-
+    <div class="bio">BIO</div>
+    <p></p>
+    <div class="title">Find me online:</div>
     <div class="links">
       <a class="link" href="https://twitter.com/VShabadi" target="_blank"> <!-- Add or  remove as many links as you want -->
         <i class="fab fa-twitter">&nbsp;</i>Twitter
@@ -45,19 +47,12 @@
       <a class="link" href="https://github.com/VShabadi" target="_blank">
         <i class="fab fa-github">&nbsp;</i>GitHub
       </a>
-      <a
-        class="link"
-        href="http://www.linkedin.com/in/vshabadi"
-        target="_blank"
-      >
+      <a class="link" href="http://www.linkedin.com/in/vshabadi" target="_blank">
         <i class="fab fa-linkedin">&nbsp;</i>Linkedin
       </a>
       <a class="link" href="mailto:vshabadi@protonmail.com" target="_blank">
         <i class="fa fa-envelope">&nbsp;</i>Email
-      </a>
-      <a class="link" href="https://fervium.github.io/" target="_blank">
-        <i class="fa fa-money-bill-alt">&nbsp;</i>Fervium
-      </a>
+      </a>     
     </div>
 
     <div class="source">
