--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </a>
 
     <div class="userName">Vishwaraj Shabadi</div>
-    <div class="bio">BIO</div>
+    <div class="bio">Hey, I am Vishwaraj Shabadi, I like travelling, learning new things and taking pictures. My interests are crypto, stocks, technology and science.</div>
     <p></p>
     <div class="title">Find me online:</div>
     <div class="links">
