--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vishwaraj Shabadi Bio-Link-Tool</title>
-    <!-- Replace with your name -->
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -17,7 +16,6 @@
       type="image/x-icon"
     />
 
-<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-SDG0CVEFJG"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -30,7 +28,6 @@
   <body>
     <a class="profilePicture">
       <img src="./assets/images/profile-picture.jpg" alt="Profile Picture" />
-      <!-- Place your profile picture in this path -->
     </a>
 
     <div class="userName">Vishwaraj Shabadi</div>
@@ -38,7 +35,7 @@
     <p></p>
     <div class="title">Find me online:</div>
     <div class="links">
-      <a class="link" href="https://twitter.com/VShabadi" target="_blank"> <!-- Add or  remove as many links as you want -->
+      <a class="link" href="https://twitter.com/VShabadi" target="_blank"> 
         <i class="fab fa-twitter">&nbsp;</i>Twitter
       </a>
       <a class="link" href="https://instagram.com/vshabadi" target="_blank">
@@ -56,14 +53,7 @@
     </div>
 
     <div class="source">
-      Made by Vishwaraj Shabadi. If you want your own bio-link-tool, here is a
-      <a
-        href="https://vshabadi.github.io/bio-link-tool/"
-        target="_blank"
-        rel="noopener noreferrer"
-        >guide</a
-      >
-      to make your own.
+      Made by Vishwaraj Shabadi.
     </div>
   </body>
 </html>
