--- a/index.html
+++ b/index.html
@@ -31,25 +31,33 @@
     </a>
 
     <div class="userName">Vishwaraj Shabadi</div>
-    <div class="bio">Hey, I am Vishwaraj Shabadi, I like travelling, learning new things and taking pictures. My interests are crypto, stocks, technology and science.</div>
+    <div class="bio">Hey, I am Vishwaraj Shabadi, I like travelling, learning new things and taking pictures. My interests are Science, Finance and Technology.</div>
     <p></p>
     <div class="title">Find me online:</div>
     <div class="links">
-      <a class="link" href="https://twitter.com/VShabadi" target="_blank"> 
-        <i class="fab fa-twitter">&nbsp;</i>Twitter
-      </a>
-      <a class="link" href="https://instagram.com/vshabadi" target="_blank">
-        <i class="fab fa-instagram">&nbsp;</i>Instagram
-      </a>
-      <a class="link" href="https://github.com/VShabadi" target="_blank">
-        <i class="fab fa-github">&nbsp;</i>GitHub
-      </a>
+
+
       <a class="link" href="http://www.linkedin.com/in/vshabadi" target="_blank">
         <i class="fab fa-linkedin">&nbsp;</i>Linkedin
       </a>
+
+      <a class="link" href="https://github.com/VShabadi" target="_blank">
+        <i class="fab fa-github">&nbsp;</i>GitHub
+      </a>
+      
+      <a class="link" href="https://twitter.com/VShabadi" target="_blank"> 
+        <i class="fab fa-twitter">&nbsp;</i>Twitter
+      </a>
+
+      <a class="link" href="https://instagram.com/vshabadi" target="_blank">
+        <i class="fab fa-instagram">&nbsp;</i>Instagram
+      </a>
+
       <a class="link" href="mailto:vshabadi@protonmail.com" target="_blank">
         <i class="fa fa-envelope">&nbsp;</i>Email
       </a>
+
+      
     </div>
 
     <div class="source">
