--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
     <link
       rel="icon"
-      href="./assets/images/profile-picture.jpg"
+      href="./assets/profile-picture.jpg"
       type="image/x-icon"
     />
 
