--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   <body>
     <a class="profilePicture">
-      <img src="./assets/images/profile-picture.jpg" alt="Profile Picture" />
+      <img src="./assets/profile-picture.jpg" alt="Profile Picture" />
     </a>
 
     <div class="userName">Vishwaraj Shabadi</div>
